objects/Account.object
<CustomObject>
    <sharingModel>Private</sharingModel>
    <fields>
        <fullName>SLA__c</fullName>
        <label>SLA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>Bronze</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <label>Active</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Community__c</fullName>
        <label>Community</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Community_Picklist</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Source__c</fullName>
        <label>Lead Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DM - BRC</fullName>
                </value>
                <value>
                    <fullName>DM - Event</fullName>
                </value>
                <value>
                    <fullName>DM - Other</fullName>
                </value>
                <value>
                    <fullName>GEN - Drive By</fullName>
                </value>
                <value>
                    <fullName>GEN - Lives in Area</fullName>
                </value>
                <value>
                    <fullName>GEN - Redevelopment</fullName>
                </value>
                <value>
                    <fullName>GEN - Reputation</fullName>
                </value>
                <value>
                    <fullName>GEN - Signage</fullName>
                </value>
                <value>
                    <fullName>INT - Web Other</fullName>
                </value>
                <value>
                    <fullName>INT - Website Inquiry</fullName>
                </value>
                <value>
                    <fullName>ME - Radio</fullName>
                </value>
                <value>
                    <fullName>ME - TV</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>PM - Magazine</fullName>
                </value>
                <value>
                    <fullName>PM - Newspaper</fullName>
                </value>
                <value>
                    <fullName>PM - Phone Directory/Yellow Pages</fullName>
                </value>
                <value>
                    <fullName>PR - Public Relations</fullName>
                </value>
                <value>
                    <fullName>REF - Family/Friend</fullName>
                </value>
                <value>
                    <fullName>REF - Other Community</fullName>
                </value>
                <value>
                    <fullName>REF - Professional</fullName>
                </value>
                <value>
                    <fullName>REF - Resident Referral</fullName>
                </value>
                <value>
                    <fullName>REF - Residents</fullName>
                </value>
                <value>
                    <fullName>REF - Team Member</fullName>
                </value>
                <value>
                    <fullName>REF - Wait List</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Inquiry_Date__c</fullName>
        <label>Inquiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLASerialNumber__c</fullName>
        <label>SLA Serial Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_Floater__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned Floater</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CustomerPriority__c</fullName>
        <label>Customer Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLAExpirationDate__c</fullName>
        <label>SLA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UpsellOpportunity__c</fullName>
        <label>Upsell Opportunity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Maybe</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Purge_from_Hubspot__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Purge from Hubspot</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reporting_Community__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reporting Community</label>
        <referenceTo>Community__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead Source Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Main_Prospect__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Created From Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>RelatedContacts</relationshipLabel>
        <relationshipName>RelatedProspects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Referral_Organization_Code__c</fullName>
        <label>Referral Organization Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assign_Original_Owner_as_Floater__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Assign Original Owner as Floater</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Navihealth_eReferral_External_Id__c</fullName>
        <label>Navihealth eReferral External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <recordTypes>
        <fullName>BusinessRT</fullName>
        <active>true</active>
        <label>BusinessRT</label>
    </recordTypes>
</CustomObject>